--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,14 @@ body{
     background-size: 100vw 100vh;
     background-repeat: no-repeat;;
 }
+a{
+    color: black;
+}
+ul{
+    list-style: none;
+}
 #menu{
+    
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -34,7 +41,7 @@ body{
     color:#fff;
     text-decoration:none;
     font-weight:400;
-    font-size:15px;
+    font-size:1.5rem;
     padding:10px;
     letter-spacing:1px;
    }
@@ -77,7 +84,7 @@ body{
    }
 
 /*TABLAS*/
-table{
+.tabla,table{
 	background-color: white;
 	text-align: left;
 	border-collapse: collapse;
@@ -127,7 +134,7 @@ tr:hover td{
 } 
 .contenedor{
     width: 400px;
-    height: 300px;
+    height: 500px;
     margin: auto;
     background: #fff;
     box-shadow: 1px 7px 25px rgba(0,0,0,0.6);
@@ -140,7 +147,7 @@ tr:hover td{
 } 
 .contenedor header{
     padding: 10px;
-    background: #db8046;
+    background: #ff0101;
     color: #fff;
 }
 .contenedor label{
@@ -162,7 +169,7 @@ tr:hover td{
     display: none;
 }
 .lbl-modal{
-    background: #fff;
+    background:none;
     padding: 10px 15px;
     border-radius: 4px;
     cursor: pointer;
